[package]
name = "lotka_volterra"
version = "0.1.0"
edition = "2024"

[dependencies]
# clap = { version = "4.0", features = ["derive"] }
# ode_solvers = "0.6.1"
# plotters = "0.3.7"

ode_solvers = "0.6.1"
plotters = "0.3.7"
egui = "0.31.0"
egui_plot = "0.31.0"
eframe = "0.31.1"
clap = { version = "4.5.32", features = ["derive"] }
