[package]
name    = "lotka-volterra"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dialoguer = "0.11.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_plot = "0.31.0"
indicatif = "0.17.11"
itertools = "0.14.0"
ode_solvers = "0.6.1"
plotters ="0.3.7"
prettytable-rs = "0.10.0"
rand = "0.9.0"
